fix: height of .header section on mobile

--- a/src/sass/blocks/header/__wrapper/_header__wrapper.scss
+++ b/src/sass/blocks/header/__wrapper/_header__wrapper.scss
@@ -1,5 +1,5 @@
 .header {
   &__wrapper {
-    min-height: 90px;
+    min-height: 43px;
   }
 }
